<resources>
    <string name="app_name">newChat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_get_captcha">GetCaptchaActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_message_list_main">MessageLIstMainActivity</string>
    <string name="title_activity_publish">PublishActivity</string>
    <string name="title_activity_comment_message">CommentMessageActivity</string>
    <string name="phone_num">phone_num:</string>
    <string name="get_captcha">Get Captcha</string>
    <string name="fill_captcha">fill captcha</string>
    <string name="captcha">catcha:</string>
    <string name="login">login</string>
    <string name="publish">publish</string>
    <string name="comment">comment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string-array name="navigation_draver">
        <item>设置</item>
        <item>隐私</item>
        <item>通用</item>
        <item>通知</item>
    </string-array>
    <string name="title_activity_special">SpecialActivity</string>
</resources>
