<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.henmory.newchat.Activities.LoginActivity"
    tools:showIn="@layout/activity_login">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@android:color/darker_gray"
        android:id="@+id/login_divider1"
        android:layout_marginTop="@dimen/divider_margin_top"
        android:layout_marginBottom="@dimen/divider_margin_bottom"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/login_linear1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_num"
            android:layout_below="@id/login_divider1"
            android:id="@+id/login_tv_phone_num_key"
            android:layout_marginRight="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/login_tv_phone_num_key"
            android:id="@+id/login_tv_phone_num_value"
            android:inputType="phone"
            android:textCursorDrawable="@drawable/custom_corsor"
            android:background="@drawable/edit_text_selector"
            android:maxLines="1"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/login_linear1"
        android:layout_marginTop="@dimen/divider_margin_top"
        android:layout_marginBottom="@dimen/divider_margin_bottom"
        android:id="@+id/login_divider2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/login_linear2"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/login_divider2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/captcha"
            android:layout_below="@id/login_divider2"
            android:id="@+id/login_text_captcha"
            android:layout_marginRight="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/login_text_captcha"
            android:id="@+id/login_edit_captcha"
            android:inputType="numberDecimal"
            android:textCursorDrawable="@drawable/custom_corsor"
            android:background="@drawable/edit_text_selector"
            android:maxLines="1"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_btn_login"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:background="@drawable/button_selector"
        android:layout_below="@+id/login_linear2"
        android:layout_centerHorizontal="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/login_btn_login"
        android:layout_marginTop="@dimen/divider_margin_top"
        android:layout_marginBottom="@dimen/divider_margin_bottom"
        android:id="@+id/login_divider3"/>

</RelativeLayout>
