<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.henmory.newchat.Activities.GetCaptchaActivity"
    tools:showIn="@layout/activity_get_captcha">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/get_captcha_appbarlayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:navigationIcon="@mipmap/ic_launcher"/>

    </android.support.design.widget.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/get_captcha_appbarlayout"
        android:id="@+id/get_captcha_divider1"

        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/divider_margin_top"
        android:layout_marginBottom="@dimen/divider_margin_bottom"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/get_captcha_linear1"
        android:layout_marginTop="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@id/get_captcha_divider1"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_num"
            android:layout_below="@id/get_captcha_divider1"
            android:id="@+id/get_captcha_tv_phone_num_key"
            android:layout_marginRight="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/get_captcha_tv_phone_num_key"
            android:id="@+id/get_captcha_tv_phone_num_value"
            android:inputType="phone"
            android:textCursorDrawable="@drawable/custom_corsor"
            android:background="@drawable/edit_text_selector"
            android:maxLines="1"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_captcha"
        android:id="@+id/get_captcha_btn_get_captcha"
        android:layout_below="@id/get_captcha_linear1"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:background="@drawable/button_selector"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/fill_captcha"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/button_selector"
        android:id="@+id/get_captcha_btn_fill_captcha"
        android:layout_below="@id/get_captcha_linear1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@android:color/darker_gray"

        android:layout_below="@id/get_captcha_btn_get_captcha"
        android:layout_marginTop="@dimen/divider_margin_top"
        android:layout_marginBottom="@dimen/divider_margin_bottom"
        android:id="@+id/get_captcha_divider2"/>
</RelativeLayout>
